finished multiplicative noise analysis

--- a/phantom multiplicative noise pymc3.ipynb
+++ b/phantom multiplicative noise pymc3.ipynb
@@ -166,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fbb60d246d8>]"
+       "[<matplotlib.lines.Line2D at 0x1c2f7b2320>]"
       ]
      },
      "execution_count": 10,
@@ -205,12 +205,11 @@
      "text": [
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
-      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [ampl_noise, ampl_signal, sigma1]\n",
-      "Sampling 4 chains: 100%|██████████| 4000/4000 [06:41<00:00,  9.96draws/s] \n",
-      "The acceptance probability does not match the target. It is 0.8842087401786181, but should be close to 0.8. Try to increase the number of tuning steps.\n",
-      "The acceptance probability does not match the target. It is 0.8876428851627465, but should be close to 0.8. Try to increase the number of tuning steps.\n",
-      "The acceptance probability does not match the target. It is 0.8919699408973343, but should be close to 0.8. Try to increase the number of tuning steps.\n"
+      "Sampling 2 chains, 0 divergences: 100%|██████████| 2000/2000 [07:56<00:00,  4.20draws/s] \n",
+      "The acceptance probability does not match the target. It is 0.9145625722672882, but should be close to 0.8. Try to increase the number of tuning steps.\n",
+      "The acceptance probability does not match the target. It is 0.8889753476865254, but should be close to 0.8. Try to increase the number of tuning steps.\n"
      ]
     }
    ],
@@ -243,14 +242,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hstrey/anaconda3/envs/pymc3/lib/python3.6/site-packages/pymc3/stats.py:991: FutureWarning: The join_axes-keyword is deprecated. Use .reindex or .reindex_like on the result to achieve the same functionality.\n",
-      "  axis=1, join_axes=[dforg.index])\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -273,58 +264,74 @@
        "      <th></th>\n",
        "      <th>mean</th>\n",
        "      <th>sd</th>\n",
-       "      <th>mc_error</th>\n",
-       "      <th>hpd_2.5</th>\n",
-       "      <th>hpd_97.5</th>\n",
-       "      <th>n_eff</th>\n",
-       "      <th>Rhat</th>\n",
+       "      <th>hpd_3%</th>\n",
+       "      <th>hpd_97%</th>\n",
+       "      <th>mcse_mean</th>\n",
+       "      <th>mcse_sd</th>\n",
+       "      <th>ess_mean</th>\n",
+       "      <th>ess_sd</th>\n",
+       "      <th>ess_bulk</th>\n",
+       "      <th>ess_tail</th>\n",
+       "      <th>r_hat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sigma1</th>\n",
-       "      <td>8.156550</td>\n",
-       "      <td>0.006990</td>\n",
-       "      <td>0.000193</td>\n",
-       "      <td>8.142393</td>\n",
-       "      <td>8.170033</td>\n",
-       "      <td>1161.985323</td>\n",
-       "      <td>1.002914</td>\n",
+       "      <td>8.156</td>\n",
+       "      <td>0.007</td>\n",
+       "      <td>8.144</td>\n",
+       "      <td>8.169</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>503.0</td>\n",
+       "      <td>598.0</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ampl_signal</th>\n",
-       "      <td>0.138207</td>\n",
-       "      <td>0.001050</td>\n",
-       "      <td>0.000029</td>\n",
-       "      <td>0.136060</td>\n",
-       "      <td>0.140174</td>\n",
-       "      <td>1250.898964</td>\n",
-       "      <td>1.005605</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.136</td>\n",
+       "      <td>0.140</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>513.0</td>\n",
+       "      <td>509.0</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ampl_noise</th>\n",
-       "      <td>0.314995</td>\n",
-       "      <td>0.001474</td>\n",
-       "      <td>0.000039</td>\n",
-       "      <td>0.312274</td>\n",
-       "      <td>0.317989</td>\n",
-       "      <td>1208.870904</td>\n",
-       "      <td>1.004780</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.312</td>\n",
+       "      <td>0.318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>458.0</td>\n",
+       "      <td>457.0</td>\n",
+       "      <td>458.0</td>\n",
+       "      <td>631.0</td>\n",
+       "      <td>1.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 mean        sd  mc_error   hpd_2.5  hpd_97.5        n_eff  \\\n",
-       "sigma1       8.156550  0.006990  0.000193  8.142393  8.170033  1161.985323   \n",
-       "ampl_signal  0.138207  0.001050  0.000029  0.136060  0.140174  1250.898964   \n",
-       "ampl_noise   0.314995  0.001474  0.000039  0.312274  0.317989  1208.870904   \n",
+       "              mean     sd  hpd_3%  hpd_97%  mcse_mean  mcse_sd  ess_mean  \\\n",
+       "sigma1       8.156  0.007   8.144    8.169        0.0      0.0     511.0   \n",
+       "ampl_signal  0.138  0.001   0.136    0.140        0.0      0.0     508.0   \n",
+       "ampl_noise   0.315  0.002   0.312    0.318        0.0      0.0     458.0   \n",
        "\n",
-       "                 Rhat  \n",
-       "sigma1       1.002914  \n",
-       "ampl_signal  1.005605  \n",
-       "ampl_noise   1.004780  "
+       "             ess_sd  ess_bulk  ess_tail  r_hat  \n",
+       "sigma1        511.0     503.0     598.0   1.00  \n",
+       "ampl_signal   508.0     513.0     509.0   1.00  \n",
+       "ampl_noise    457.0     458.0     631.0   1.01  "
       ]
      },
      "execution_count": 13,
@@ -338,25 +345,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.183736113326924 13.339736113326925 18.07844585210143\n",
-      "-6.823161171977761e-11\n",
-      "7.681250531770555e-16\n"
+      "sigma mult: 5.183846273209693\n",
+      "sigma thermal: 8.156453448544253\n",
+      "sigma total noise fitted: 9.664367286198278\n",
+      "sigma total (fmri-gt): 9.09420514789623\n",
+      "sigma signal: 2.274579586409199\n",
+      "signal to noise ratio: 0.2353573202518426\n"
      ]
     }
    ],
    "source": [
     "# now we want to see what are the contributions to the noise\n",
-    "sigma_mult = np.sqrt(np.sum(0.314995**2*gt_data**2)/len(gt_data))\n",
-    "print(sigma_mult,sigma_mult+8.156,np.std(fmri_data-gt_data))\n",
-    "print(np.mean(fmri_data))\n",
-    "print(np.mean(gt_data))"
+    "sig = np.mean(posterior_2['sigma1'])\n",
+    "amp_noise = np.mean(posterior_2['ampl_noise'])\n",
+    "amp_signal = np.mean(posterior_2['ampl_signal'])\n",
+    "sigma_mult = np.sqrt(np.sum(amp_noise**2*gt_data**2)/len(gt_data))\n",
+    "print(\"sigma mult:\",sigma_mult)\n",
+    "print(\"sigma thermal:\",sig)\n",
+    "print(\"sigma total noise fitted:\",np.sqrt(sigma_mult**2+sig**2))\n",
+    "print(\"sigma total (fmri-gt):\",np.std(fmri_data-amp_signal*gt_data))\n",
+    "print(\"sigma signal:\",np.std(amp_signal*gt_data))\n",
+    "print(\"signal to noise ratio:\",np.std(amp_signal*gt_data)/np.sqrt(sigma_mult**2+sig**2))"
    ]
   },
   {
