created stand-alone ou.py to calculate cross correlations

--- a/phantom multiplicative noise 3TSkyra.ipynb
+++ b/phantom multiplicative noise 3TSkyra.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "          9.07057942,  8.87610252]])}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
     "gt = phantom_data[\"ground_truth\"]\n",
     "fmri = phantom_data[\"measured\"]\n",
     "static_std = phantom_data_sd['std_dev'][0]\n",
-    "print(gt.shape,fmri.shape,gt_std.shape)"
+    "print(gt.shape,fmri.shape,static_std.shape)"
    ]
   },
   {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8daaadfcd0>]"
+       "[<matplotlib.lines.Line2D at 0x7fa28a3b3b90>]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        " <BarContainer object of 30 artists>)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -631,16 +631,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f8312f61250>"
+       "<matplotlib.legend.Legend at 0x7fa2ba3fe190>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='8000' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [8000/8000 11:31<00:00 Sampling 4 chains, 0 divergences]\n",
+       "      100.00% [8000/8000 11:12<00:00 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -716,7 +716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 708 seconds.\n"
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 692 seconds.\n"
      ]
     }
    ],
@@ -844,22 +844,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigma mult: 5.319601712148386\n",
-      "sigma thermal: 12.309340380669042\n",
-      "sigma thermal normalized 1.6347177432624795\n",
-      "sigma thermal normalized error 0.0011688685830877244\n",
-      "sigma total noise fitted: 13.409624267035282\n",
+      "sigma mult: 5.319290433622847\n",
+      "sigma thermal: 12.309295287914912\n",
+      "sigma thermal normalized 1.634711754807941\n",
+      "sigma thermal normalized error 0.001152083349605168\n",
+      "sigma total noise fitted: 13.409459392619667\n",
       "sigma total (fmri-gt): 13.321727587682403\n",
       "sigma GT: 7.529948476672639\n",
-      "signal to noise ratio: 0.3153194719902222\n",
-      "sigma multi/total: 0.1573711127863844\n"
+      "signal to noise ratio: 0.3153272259841397\n",
+      "sigma multi/total: 0.1573565655102798\n"
      ]
     }
    ],
@@ -883,25 +883,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigma mult: 22.919602913141077\n",
-      "sigma thermal: 12.309340380669042\n",
-      "sigma thermal normalized 1.6347177432624795\n",
-      "sigma thermal normalized error 0.0011688685830877244\n",
-      "sigma total noise fitted: 26.015919324583447\n",
+      "sigma mult: 561.1495928667431\n",
+      "sigma thermal: 12.309295287914912\n",
+      "sigma thermal normalized 1.634711754807941\n",
+      "sigma thermal normalized error 0.001152083349605168\n",
+      "sigma total noise fitted: 561.2845840792321\n",
       "sigma total (fmri-gt): 13.321727587682403\n",
       "sigma GT: 7.529948476672639\n",
       "sigma fmri: 14.075899575172947\n",
       "sigma fmri/sigma GT: 1.8693221631966406\n",
-      "signal to noise ratio: 3.9994636327608015\n",
-      "sigma multi/total: 0.7761324183471052\n",
-      "sigma multi/thermal: 3.4669263526976137\n"
+      "signal to noise ratio: 0.008592387958819262\n",
+      "sigma multi/total: 0.999519049753543\n",
+      "sigma multi/thermal: 2078.2171484809705\n"
      ]
     }
    ],
@@ -909,7 +909,7 @@
     "# same analysis for multiplicative noise prop to S\n",
     "sig = np.mean(posterior_2['sigma1'])\n",
     "amp_noise = np.mean(posterior_2['ampl_noise'])\n",
-    "sigma_mult = np.sqrt(np.sum((amp_noise**2)*(gt_mean**2)/len(gt_data)))\n",
+    "sigma_mult = np.sqrt(np.sum((amp_noise**2)*(gt_mean**2))/len(gt_mean))\n",
     "sig_total = np.sqrt(sigma_mult**2+sig**2)\n",
     "print(\"sigma mult:\",sigma_mult)\n",
     "print(\"sigma thermal:\",sig)\n",
@@ -927,16 +927,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f83f32d18d0>"
+       "<matplotlib.legend.Legend at 0x7fa29a362410>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='8000' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [8000/8000 08:17<00:00 Sampling 4 chains, 0 divergences]\n",
+       "      100.00% [8000/8000 08:00<00:00 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -1013,7 +1013,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 512 seconds.\n"
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 494 seconds.\n"
      ]
     }
    ],
@@ -1032,22 +1032,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigma mult: 5.789364280550853\n",
-      "sigma thermal: 12.309340380669042\n",
-      "sigma thermal normalized 1.502072919327683\n",
-      "sigma thermal normalized error 0.0010740238503834977\n",
-      "sigma total noise fitted: 13.602815862169406\n",
+      "sigma mult: 5.789025513689241\n",
+      "sigma thermal: 12.309295287914912\n",
+      "sigma thermal normalized 1.5020674167903623\n",
+      "sigma thermal normalized error 0.0010586006100335018\n",
+      "sigma total noise fitted: 13.602630880944657\n",
       "sigma total (fmri-gt): 12.841471474892998\n",
       "sigma GT: 8.194902006607386\n",
-      "signal to noise ratio: 0.36293586848702475\n",
-      "sigma multi/total: 0.18113572604126094\n"
+      "signal to noise ratio: 0.3629457396330606\n",
+      "sigma multi/total: 0.18111945417018727\n"
      ]
     }
    ],
@@ -1071,25 +1071,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigma mult: 27.345978333036165\n",
-      "sigma thermal: 12.309340380669042\n",
-      "sigma thermal normalized 1.502072919327683\n",
-      "sigma thermal normalized error 0.0010740238503834977\n",
-      "sigma total noise fitted: 29.988704400124604\n",
+      "sigma mult: 561.1495928667431\n",
+      "sigma thermal: 12.309295287914912\n",
+      "sigma thermal normalized 1.5020674167903623\n",
+      "sigma thermal normalized error 0.0010586006100335018\n",
+      "sigma total noise fitted: 561.2845840792321\n",
       "sigma total (fmri-gt): 12.841471474892998\n",
       "sigma GT: 8.194902006607386\n",
       "sigma fmri: 14.738122270047977\n",
       "sigma fmri/sigma GT: 1.798450092284804\n",
-      "signal to noise ratio: 3.009987552968379\n",
-      "sigma multi/total: 0.8315177493380034\n",
-      "sigma multi/thermal: 4.935343314033511\n"
+      "signal to noise ratio: 0.008592387958819262\n",
+      "sigma multi/total: 0.999519049753543\n",
+      "sigma multi/thermal: 2078.2171484809705\n"
      ]
     }
    ],
@@ -1097,7 +1097,7 @@
     "# same analysis for multiplicative noise prop to S\n",
     "sig = np.mean(posterior_2['sigma1'])\n",
     "amp_noise = np.mean(posterior_2['ampl_noise'])\n",
-    "sigma_mult = np.sqrt(np.sum((amp_noise**2)*(gt_mean**2)/len(gt_data)))\n",
+    "sigma_mult = np.sqrt(np.sum((amp_noise**2)*(gt_mean**2))/len(gt_mean))\n",
     "sig_total = np.sqrt(sigma_mult**2+sig**2)\n",
     "print(\"sigma mult:\",sigma_mult)\n",
     "print(\"sigma thermal:\",sig)\n",
