oucorr.py vectorizes the Bayesian correlation analysis

--- a/Oxytocin correlation analysis vectorized.ipynb
+++ b/Oxytocin correlation analysis vectorized.ipynb
@@ -2,19 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "context has already been set",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-95-4a1dc408ff73>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpearsonr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmultiprocessing\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_start_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"fork\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mSMALL_SIZE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/envs/pymc3/lib/python3.7/multiprocessing/context.py\u001b[0m in \u001b[0;36mset_start_method\u001b[0;34m(self, method, force)\u001b[0m\n\u001b[1;32m    240\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mset_start_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_actual_context\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'context has already been set'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_actual_context\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: context has already been set"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Solarize_Light2', '_classic_test_patch', 'arviz-bluish', 'arviz-brownish', 'arviz-colors', 'arviz-cyanish', 'arviz-darkgrid', 'arviz-grayscale', 'arviz-greenish', 'arviz-orangish', 'arviz-plasmish', 'arviz-purplish', 'arviz-redish', 'arviz-royish', 'arviz-viridish', 'arviz-white', 'arviz-whitegrid', 'bmh', 'classic', 'dark_background', 'fast', 'fivethirtyeight', 'ggplot', 'grayscale', 'seaborn', 'seaborn-bright', 'seaborn-colorblind', 'seaborn-dark', 'seaborn-dark-palette', 'seaborn-darkgrid', 'seaborn-deep', 'seaborn-muted', 'seaborn-notebook', 'seaborn-paper', 'seaborn-pastel', 'seaborn-poster', 'seaborn-talk', 'seaborn-ticks', 'seaborn-white', 'seaborn-whitegrid', 'tableau-colorblind10']\n"
      ]
     }
    ],
@@ -50,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +90,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcFundamentalStats(y):\n",
+    "    ass = np.sum(y[1:-1]**2,axis=0)\n",
+    "    aep = y[0]**2 + y[-1]**2\n",
+    "    ac = np.sum(y[0:-1]*y[1:],axis=0)\n",
+    "    return aep,ass,ac\n",
+    "\n",
+    "def calcBfromDataN(aep,ass,ac,N):\n",
+    "    coef = np.array([(N-1)*ass,\n",
+    "       (2.0-N)*ac,\n",
+    "       -aep-(N+1)*ass,\n",
+    "       N*ac])\n",
+    "    b = cubicsolver(coef)\n",
+    "    return b[2,:,:]\n",
+    "\n",
+    "def calcAfromB(B,aep,ass,ac,N):\n",
+    "    Q=aep/(1-B**2)\n",
+    "    Q=Q+ass*(1+B**2)/(1-B**2)\n",
+    "    Q=Q-ac*2*B/(1-B**2)\n",
+    "    A = Q/N\n",
+    "    P2A = -N/A**2/2\n",
+    "    Btmp = B**2*(1+2*N)\n",
+    "    tmp = (1+Btmp)*aep + (2*Btmp + N + 1 -B**4*(N-1))*ass - 2*B*(1+B**2+2*N)*ac\n",
+    "    P2B = -tmp/((1-B**2)**2*(aep + (1+B**2)*ass - 2*B*ac))\n",
+    "    PAB = (N-1)*B/A/(1-B**2)\n",
+    "    dA = np.sqrt(-P2B/(P2A*P2B-PAB**2))\n",
+    "    dB = np.sqrt(-P2A/(P2A*P2B-PAB**2))\n",
+    "    return A,dA,dB\n",
+    "\n",
+    "def calcCorr(windows,N,REGIONS):\n",
+    "    corrC = []\n",
+    "    corrdC = []\n",
+    "    corrB1 = []\n",
+    "    for m in windows:\n",
+    "        x1 = np.repeat(m[:, :, np.newaxis], REGIONS, axis=2)\n",
+    "        x2 = np.repeat(m[:, :, np.newaxis], REGIONS, axis=2).swapaxes(1,2)\n",
+    "        y1 = x1 + x2\n",
+    "        y2 = x1 - x2\n",
+    "        aep1,ass1,ac1 = calcFundamentalStats(y1)\n",
+    "        aep2,ass2,ac2 = calcFundamentalStats(y2)\n",
+    "        B1 = calcBfromDataN(aep1,ass1,ac1,N)\n",
+    "        B2 = calcBfromDataN(aep2,ass2,ac2,N)\n",
+    "        A1,dA1,dB1 = calcAfromB(B1,aep1,ass1,ac1,N)\n",
+    "        A2,dA2,dB2 = calcAfromB(B2,aep2,ass2,ac2,N)\n",
+    "        Adiff = A1-A2\n",
+    "        C = np.where(Adiff>0,Adiff/A2,Adiff/A1)\n",
+    "        dC = np.where(Adiff>0,np.sqrt(dA1**2/A1**2 + A1**2*dA2**2/A2**4),np.sqrt(dA2**2/A1**2 + A2**2*dA1**2/A1**4))\n",
+    "        corrC.append(C)\n",
+    "        corrdC.append(dC)\n",
+    "        corrB1.append(B1)\n",
+    "    return corrC,corrdC,corrB1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,25 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.DS_Store',\n",
-       " 'Subject001.npy',\n",
-       " 'Subject002.npy',\n",
-       " 'Subject003.npy',\n",
-       " 'Subject004.npy',\n",
-       " 'Subject005.npy']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get data files names\n",
     "datafilenames = os.listdir(datadir)\n",
@@ -141,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,12 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 748 = 2x2x11x17 so splitting it up into chuncks of 44 is a good idea\n",
     "WINDOW_LENGTH =44\n",
+    "REGIONS = 32\n",
     "num = int((time_series.shape[0] - 1 - \\\n",
     "               (time_series.shape[0] - 1) % WINDOW_LENGTH) /\n",
     "              WINDOW_LENGTH)\n",
@@ -175,322 +213,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "windows = np.array(windows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17, 44, 32)"
+       "(44, 32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "windows.shape"
+    "windows[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "one = windows[0,:,:]\n",
-    "two = windows[1,:,:]"
+    "C,dC,B1 = calcCorr(windows,WINDOW_LENGTH,REGIONS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 1., 0.]])"
+       "array([[        nan, -0.10706633, -0.08582705, ...,  1.3621148 ,\n",
+       "         0.30110848, -0.3113514 ],\n",
+       "       [-0.10706633,         nan,  2.287269  , ..., -0.11149339,\n",
+       "        -0.3324413 , -0.1119395 ],\n",
+       "       [-0.08582705,  2.287269  ,         nan, ...,  0.4324632 ,\n",
+       "         0.50511056,  1.2791337 ],\n",
+       "       ...,\n",
+       "       [ 1.3621148 , -0.11149339,  0.4324632 , ...,         nan,\n",
+       "         0.64303637,  0.3700458 ],\n",
+       "       [ 0.30110848, -0.3324413 ,  0.50511056, ...,  0.64303637,\n",
+       "                nan,  2.549744  ],\n",
+       "       [-0.3113514 , -0.1119395 ,  1.2791337 , ...,  0.3700458 ,\n",
+       "         2.549744  ,         nan]], dtype=float32)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.tri(3,3,k=-1)"
+    "C[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(44, 32, 32) (44, 32, 32) (44, 32, 32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# we now need to create a 32x32 matrix of correlations\n",
-    "b = np.repeat(one[:, :, np.newaxis], 32, axis=2)*np.tri(32,32,-1)\n",
-    "c = np.repeat(one[:, :, np.newaxis], 32, axis=2).swapaxes(1,2)*np.tri(32,32,-1)\n",
-    "mask = np.repeat(np.tri(32,32,-1)[np.newaxis,:, :],44,axis=0)\n",
-    "print(b.shape,c.shape,mask.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ma.core.MaskedArray"
+       "array([[       nan, 0.4811523 , 0.40897566, ..., 0.79884464, 0.38116524,\n",
+       "        0.4569949 ],\n",
+       "       [0.4811523 ,        nan, 1.3479211 , ..., 0.6421299 , 0.4880559 ,\n",
+       "        0.52075267],\n",
+       "       [0.40897566, 1.3479211 ,        nan, ..., 0.6877656 , 0.4092623 ,\n",
+       "        0.8124354 ],\n",
+       "       ...,\n",
+       "       [0.79884464, 0.6421299 , 0.6877656 , ...,        nan, 0.5636756 ,\n",
+       "        0.5995009 ],\n",
+       "       [0.38116524, 0.4880559 , 0.4092623 , ..., 0.5636756 ,        nan,\n",
+       "        0.8185537 ],\n",
+       "       [0.4569949 , 0.52075267, 0.8124354 , ..., 0.5995009 , 0.8185537 ,\n",
+       "               nan]], dtype=float32)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bm = ma.masked_array(b, mask=mask)\n",
-    "cm = ma.masked_array(c, mask=mask)\n",
-    "type(bm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y1 = b + c\n",
-    "y2 = b - c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcFundamentalStats(y):\n",
-    "    ass = np.sum(y[1:-1]**2,axis=0)\n",
-    "    aep = y[0]**2 + y[-1]**2\n",
-    "    ac = np.sum(y[0:-1]*y[1:],axis=0)\n",
-    "    return aep,ass,ac"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcBfromDataN(aep,ass,ac,N):\n",
-    "    coef = np.array([(N-1)*ass,\n",
-    "       (2.0-N)*ac,\n",
-    "       -aep-(N+1)*ass,\n",
-    "       N*ac])\n",
-    "    b = cubicsolver(coef)\n",
-    "    return b[2,:,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32, 32) (32, 32) (32, 32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "aep1,ass1,ac1 = calcFundamentalStats(y1)\n",
-    "aep2,ass2,ac2 = calcFundamentalStats(y2)\n",
-    "print(ass1.shape,aep1.shape,ac1.shape)"
+    "dC[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B1 = calcBfromDataN(aep1,ass1,ac1,44)\n",
-    "B2 = calcBfromDataN(aep2,ass2,ac2,44)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(32, 32)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcAfromB(B,aep,ass,ac):\n",
-    "    Q=aep1/(1-B**2)\n",
-    "    Q=Q+ass*(1+B**2)/(1-B**2)\n",
-    "    Q=Q-ac*2*B/(1-B**2)\n",
-    "    A = Q/N\n",
-    "    P2A = -N/A**2/2\n",
-    "    Btmp = B**2*(1+2*N)\n",
-    "    tmp = (1+Btmp)*aep + (2*Btmp + N + 1 -B**4*(N-1))*ass - 2*B*(1+B**2+2*N)*ac\n",
-    "    P2B = -tmp/((1-B**2)**2*(aep1 + (1+B**2)*ass - 2*B*ac))\n",
-    "    PAB = (N-1)*B/A/(1-B**2)\n",
-    "    dA = np.sqrt(-P2B/(P2A*P2B-PAB**2))\n",
-    "    dB = np.sqrt(-P2A/(P2A*P2B-PAB**2))\n",
-    "    return A,dA,dB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A1,dA1,dB1 = calcAfromB(B1,aep1,ass1,ac1)\n",
-    "A2,dA2,dB2 = calcAfromB(B2,aep2,ass2,ac2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Adiff = A1-A2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C = np.where(Adiff>0,Adiff/A2,Adiff/A1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dC = np.where(Adiff>0,np.sqrt(dA1**2/A1**2 + A1**2*dA2**2/A2**4),np.sqrt(dA2**2/A1**2 + A2**2*dA1**2/A1**4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[        nan,         nan,         nan, ...,         nan,\n",
-       "                nan,         nan],\n",
-       "       [-0.01008025,         nan,         nan, ...,         nan,\n",
-       "                nan,         nan],\n",
-       "       [-0.07917531,  2.48333215,         nan, ...,         nan,\n",
-       "                nan,         nan],\n",
+       "array([[0.47190538, 0.6040477 , 0.4290861 , ..., 0.75656635, 0.20665708,\n",
+       "        0.24578765],\n",
+       "       [0.6040477 , 0.69512045, 0.5928725 , ..., 0.75271153, 0.37707984,\n",
+       "        0.2998921 ],\n",
+       "       [0.4290861 , 0.5928725 , 0.47767687, ..., 0.68811786, 0.18454611,\n",
+       "        0.19061585],\n",
        "       ...,\n",
-       "       [ 0.99915326,  0.11143428,  0.2220165 , ...,         nan,\n",
-       "                nan,         nan],\n",
-       "       [ 0.30345814, -0.29584338,  0.29894772, ...,  0.37308003,\n",
-       "                nan,         nan],\n",
-       "       [-0.20023392, -0.1609543 ,  0.47145325, ...,  0.14045303,\n",
-       "         1.01829989,         nan]])"
+       "       [0.75656635, 0.75271153, 0.68811786, ..., 0.8216834 , 0.54425335,\n",
+       "        0.5862237 ],\n",
+       "       [0.20665708, 0.37707984, 0.18454611, ..., 0.54425335, 0.02299373,\n",
+       "        0.18487445],\n",
+       "       [0.24578765, 0.2998921 , 0.19061585, ..., 0.5862237 , 0.18487445,\n",
+       "        0.17468265]], dtype=float32)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "C"
+    "B1[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[       nan,        nan,        nan, ...,        nan,        nan,\n",
-       "               nan],\n",
-       "       [0.4287121 ,        nan,        nan, ...,        nan,        nan,\n",
-       "               nan],\n",
-       "       [0.40600708, 1.33738398,        nan, ...,        nan,        nan,\n",
-       "               nan],\n",
+       "array([[1.9185606 , 1.4092203 , 0.9736981 , ..., 0.8687135 , 1.6152146 ,\n",
+       "        1.2817225 ],\n",
+       "       [1.4092203 , 1.7349426 , 1.4585032 , ..., 0.85254246, 1.2805864 ,\n",
+       "        1.3689727 ],\n",
+       "       [0.9736981 , 1.4585032 , 1.1296115 , ..., 0.903061  , 1.079182  ,\n",
+       "        1.0356783 ],\n",
        "       ...,\n",
-       "       [0.75318171, 0.54084688, 0.77343743, ...,        nan,        nan,\n",
-       "               nan],\n",
-       "       [0.38156371, 0.47241831, 0.37336537, ..., 0.53120174,        nan,\n",
-       "               nan],\n",
-       "       [0.41311191, 0.56943747, 1.41862497, ..., 0.63444925, 0.51344271,\n",
-       "               nan]])"
+       "       [0.8687135 , 0.85254246, 0.903061  , ..., 3.2810636 , 0.5729598 ,\n",
+       "        0.7897095 ],\n",
+       "       [1.6152146 , 1.2805864 , 1.079182  , ..., 0.5729598 , 2.1465445 ,\n",
+       "        1.9803836 ],\n",
+       "       [1.2817225 , 1.3689727 , 1.0356783 , ..., 0.7897095 , 1.9803836 ,\n",
+       "        3.1825545 ]], dtype=float32)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dC"
+    "dA1"
    ]
   },
   {
